Upgraded to Java 25 + Migrated to macOS 26 SDK + Removed support for Intel Macs